release: add research center 2 overnight strategy
